--- a/Application/Home/View/Machine/index.html
+++ b/Application/Home/View/Machine/index.html
@@ -502,7 +502,7 @@
 													</tr>
 												</thead>
 
-												<tbody id="display2">
+												<tbody class="displaytbody">
 													<tr class="displaytable">
 														<td class="center">
 															<label>
@@ -511,12 +511,10 @@
 															</label>
 														</td>
 
-														<td>
-															<a href="#">{{$machinenumber}}</a>
-														</td>
-														<td>{{$machinename}}</td>
-														<td class="hidden-480">{{$machineown}}</td>
-														<td>{{$machinetime}}</td>
+														<td class="one">{{$machinenumber}}</td>
+														<td class="two">{{$machinename}}</td>
+														<td class="three">{{$machineown}}</td>
+														<td class="four">{{$machinetime}}</td>
 
 														<td class="hidden-480">
 															<span class="label label-sm label-warning">Expiring</span>
@@ -575,9 +573,10 @@
 															</div>
 														</td>
 
-
+														
 
 													</tr>
+
 												</tbody>
 
 												
