--- a/Application/Home/View/Machine/insert.html
+++ b/Application/Home/View/Machine/insert.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -18,7 +18,7 @@
 
 		<!-- fonts -->
 
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+		<!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />-->
 
 		<!-- ace styles -->
 
@@ -723,6 +723,12 @@
 
 							</form>
 
+							    <form action="index.php?m=home&c=machine&a=upload" enctype="multipart/form-data" method="post" >
+								<input type="file" name="photo" />
+								<input type="submit" value="提交" >
+								</form>
+
+
 								<script type="text/javascript">
 
 								function symbitfrom(){
@@ -747,6 +753,8 @@
 
 
 								</script>
+
+								
 
 						</div><!-- /.row -->
 					</div><!-- /.page-content -->
@@ -815,8 +823,8 @@
 		<!-- <![endif]-->
 
 		<!--[if IE]>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<![endif]-->
+
+        <![endif]-->
 
 		<!--[if !IE]> -->
 
