--- a/Application/Home/View/Machine/insert.html
+++ b/Application/Home/View/Machine/insert.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -18,7 +18,7 @@
 
 		<!-- fonts -->
 
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+	   <!-- 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" /> -->
 
 		<!-- ace styles -->
 
@@ -650,7 +650,7 @@
 						<div class="nav-search" id="nav-search">
 							<form class="form-search">
 								<span class="input-icon">
-									<input type="text" placeholder="Search ..." class="nav-search-input" id="nav-search-input" autocomplete="off" />
+									<input type="text" placeholder="Search ..." class="nav-search-input" id="nav-search-input" autocomplete="off" name="search" />
 									<i class="icon-search nav-search-icon"></i>
 								</span>
 							</form>
@@ -713,7 +713,7 @@
 								
 								</div>
 
-							数据手册文件:仅支持PDF
+							数据手册文件
 							<div class="formcss">
 							<input type="file" name="photo" />
 							</div>
@@ -790,9 +790,7 @@
 
 		<!-- <![endif]-->
 
-		<!--[if IE]>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<![endif]-->
+
 
 		<!--[if !IE]> -->
 
